# docs/swagger.yaml
@@ -317,7 +317,11 @@ paths:
               $ref: '#/definitions/models.User'
             type: array
         "400":
-          description: Bad Request
+          description: Invalid pageSize parameter
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+        "404":
+          description: No users found with specified filters
           schema:
             $ref: '#/definitions/handlers.ErrorResponse'
       summary: Get users
